Fixed issue of text not showing in fields because of white colored text.

--- a/app/assets/stylesheets/sign_up.scss
+++ b/app/assets/stylesheets/sign_up.scss
@@ -28,7 +28,7 @@ body {
 
 .field{
 	text-align: center;
-	color: white;
+	color: black;
 	font-size: 18px;
 	margin-top: 5px;
 }
